--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>com.js</groupId>
     <artifactId>pet-clinic</artifactId>
+
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>pet-clinic</name>
@@ -31,7 +32,18 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>install</goals>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+    <scm>
+        <developerConnection>scm:git:git@github.com:Jovan-Stepanovic/pet-clinic.git</developerConnection>
+    </scm>
 
 </project>
