--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.js</groupId>
         <artifactId>pet-clinic</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>pet-clinic-web</artifactId>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>com.js</groupId>
             <artifactId>pet-clinic-data</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
