--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.js</groupId>
     <artifactId>pet-clinic</artifactId>
 
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>pet-clinic</name>
     <description>pet-clinic</description>
@@ -44,7 +44,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:Jovan-Stepanovic/pet-clinic.git</developerConnection>
-      <tag>pet-clinic-0.0.2</tag>
+      <tag>HEAD</tag>
   </scm>
 
 </project>
